# simple-wandb-mcp-server

./: .gitignore  AGENTS.md  README.md  pyproject.toml  server.py
tests/: test_tools.py
