[project]
name = "mcp-wandb"
version = "0.1.0"
description = "A simple server for MCP that uses Weights & Biases (wandb) for logging and visualization."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "matplotlib>=3.10.3",
    "mcp[cli]>=1.9.4",
    "pytest>=8.4.0",
    "python-dotenv>=1.1.0",
    "wandb>=0.20.1",
]
